task1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task1-ingress
  #  annotations:
  #    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: task1
spec:
  rules:
    - host: sa.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: task1-service
                port:
                  number: 8000
          - path: /kbtu/dmitriy_khen/hello
            pathType: Prefix
            backend:
              service:
                name: task1-service
                port:
                  number: 8000
